--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.0",
     "lucide-react": "^0.525.0",
-    "next": "15.3.4",
-    "react": "^19.0.0",
+    "next": "^15.5.2",
+    "react": "^19.1.1",
     "react-day-picker": "^9.7.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.1.1",
     "tailwind-merge": "^3.3.1",
     "tailwind-scrollbar-hide": "^4.0.0"
   },
